comment controller added

--- a/RestAPIAssignment/Web.config
+++ b/RestAPIAssignment/Web.config
@@ -52,8 +52,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="BloggingDBContext" connectionString="metadata=res://*/Models.BlogginDBmMODEL.csdl|res://*/Models.BlogginDBmMODEL.ssdl|res://*/Models.BlogginDBmMODEL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-H9C5IG6\SQLEXPRESS;initial catalog=BloggingDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="BloggingDBContext5" connectionString="metadata=res://*/Models.BloggingDBModel.csdl|res://*/Models.BloggingDBModel.ssdl|res://*/Models.BloggingDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-H9C5IG6\SQLEXPRESS;initial catalog=BloggingDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+  
+<connectionStrings><add name="BloggingDBEntities" connectionString="metadata=res://*/Models.BloggingDBModel.csdl|res://*/Models.BloggingDBModel.ssdl|res://*/Models.BloggingDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-H9C5IG6\SQLEXPRESS;initial catalog=BloggingDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
