--- a/RestAPIAssignment/bin/RestAPIAssignment.dll.config
+++ b/RestAPIAssignment/bin/RestAPIAssignment.dll.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -52,4 +52,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+  
+<connectionStrings><add name="BloggingDBEntities" connectionString="metadata=res://*/Models.BloggingDBModel.csdl|res://*/Models.BloggingDBModel.ssdl|res://*/Models.BloggingDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-H9C5IG6\SQLEXPRESS;initial catalog=BloggingDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
